--- a/common/tasks/main.yml
+++ b/common/tasks/main.yml
@@ -1,10 +1,10 @@
 ---
 
-  - include: epel.yml
-    tags: epel
+  - include_tasks: epel.yml
+    tags_tasks: epel
     when: ansible_os_family == "RedHat"
 
-  - include: system_packages.yml
+  - include_tasks: system_packages.yml
     tags: system-packages
 
 #- include: hostname.yml
