--- a/common/tasks/system_packages.yml
+++ b/common/tasks/system_packages.yml
@@ -5,7 +5,7 @@
       name={{item}}
       state=latest
     with_items: 
-      {{packages}}
+      - {{packages}}
     tags:
       - system_packages
     when:
