--- a/bootstrap/tasks/main.yml
+++ b/bootstrap/tasks/main.yml
@@ -26,7 +26,7 @@
       uid="{{item.user.uid}}"
       shell="/bin/bash"
       state="present"
-    when: item.user.username in admin_users
+    when: item.user.username in admins
     with_items: "{{_users}}"
     tags: users
 
@@ -35,7 +35,7 @@
     authorized_key:
       user="{{item.user.username}}"
       key="{{item.user.ssh_key}}"
-    when: item.user.username in admin_users
+    when: item.user.username in admins
     with_items: "{{_users}}"
     tags: users
 
@@ -44,7 +44,7 @@
       name="{{item.user.username}}"
       uid="{{item.user.uid}}"
       state="present"
-    when: item.user.username in normal_users
+    when: item.user.username in users
     with_items: "{{_users}}"
     tags: users
 
@@ -52,7 +52,7 @@
     authorized_key:
       user="{{item.user.username}}"
       key="{{item.user.ssh_key}}"
-    when: item.user.username in normal_users
+    when: item.user.username in users
     with_items: "{{_users}}"
     tags: users
 
