--- a/bootstrap/tasks/main.yml
+++ b/bootstrap/tasks/main.yml
@@ -21,47 +21,47 @@
   # Loop through _users until we find a match in admin_users
   - name: Create users
     user:
-      name="{{item.user.username}}"
+      name="{{item.userdefs.username}}"
       groups="wheel"
       uid="{{item.user.uid}}"
       shell="/bin/bash"
       state="present"
-    when: item.user.username in admins
+    when: item.userdefs.username in admins
     with_items: "{{userdefs}}"
     tags: users
 
 
   - name: Push public SSH keys
     authorized_key:
-      user="{{item.user.username}}"
-      key="{{item.user.ssh_key}}"
-    when: item.user.username in admins
+      user="{{item.userdefs.username}}"
+      key="{{item.userdefs.ssh_key}}"
+    when: item.userdefs.username in admins
     with_items: "{{userdefs}}"
     tags: users
 
   - name: Create users
     user:
-      name="{{item.user.username}}"
-      uid="{{item.user.uid}}"
+      name="{{item.userdefs.username}}"
+      uid="{{item.userdefs.uid}}"
       state="present"
-    when: item.user.username in users
+    when: item.userdefs.username in users
     with_items: "{{userdefs}}"
     tags: users
 
   - name: Push public SSH keys
     authorized_key:
-      user="{{item.user.username}}"
-      key="{{item.user.ssh_key}}"
-    when: item.user.username in users
+      user="{{item.userdefs.username}}"
+      key="{{item.userdefs.ssh_key}}"
+    when: item.userdefs.username in users
     with_items: "{{userdefs}}"
     tags: users
 
   # Remove user accounts listed in our json who are not admins.
   - name: Remove old users
     user:
-      name="{{item.user.username}}"
+      name="{{item.userdefs.username}}"
       state=absent
-    when: item.user.username not in admin_users and item.user.username not in normal_users
+    when: item.userdefs.username not in admin_users and item.userdefs.username not in normal_users
     with_items: "{{userdefs}}"
     tags: users
     ignore_errors: True
