--- a/common/tasks/main.yml
+++ b/common/tasks/main.yml
@@ -3,7 +3,7 @@
   - import_tasks: system_packages.yml
     tags: system-packages
 
-#- include: hostname.yml
+  - import_tasks: hostname.yml
 
 #- include: timezone.yml
 #  tags: timezone
