--- a/playbooks/roles/bind/tasks/main.yml
+++ b/playbooks/roles/bind/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
   - name: "Install DNS Packages"
     yum:
-      name: {{item}}
-      state: latest
+      name: "{{item}}"
+      state: "latest"
     with_items:
       - "{{ packages }}"
