--- a/playbooks/roles/bind/tasks/main.yml
+++ b/playbooks/roles/bind/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
   - name: "Install DNS Packages"
     yum:
-      name: "{{item}}"
+      name: "{{name}}"
       state: "latest"
     with_items:
-      - "{{ packages.package.name }}"
+      - "{{ packages.name }}"
