Removed ansible keyword "name" from dict

--- a/playbooks/roles/bind/defaults/main.yml
+++ b/playbooks/roles/bind/defaults/main.yml
@@ -1,6 +1,4 @@
 ---
   packages:
-  - package:
-    name: "bind-chroot"
-  - package:
-    name: "bind-utils"
+  - package: "bind-chroot"
+  - package: "bind-utils"
