--- a/playbooks/roles/deploy/defaults/main.yml
+++ b/playbooks/roles/deploy/defaults/main.yml
@@ -1,3 +1,11 @@
 ---
-  hostname: "skipper"
-  ipaddr: "192.168.3.7"
+  hostname: "host"
+  ipaddr: "192.168.1.2"
+  prefix: "24"
+  gateway: "192.168.1.1"
+  dns1: "8.8.8.8"
+  dns2: "8.8.4.4"
+  domain: "localhost.localdomain"
+  name: "eth0"
+  device: "eth0"
+  onboot: "yes"
