--- a/playbooks/roles/deploy/tasks/main.yml
+++ b/playbooks/roles/deploy/tasks/main.yml
@@ -6,6 +6,5 @@
   - name: Copy network config jinja template
     template:
       src: "ifcfg-ens192.j2"
-      dest: :/etc/sysconfig/network-scripts/ifcfg-ens192"
+      dest: :/etc/sysconfig/network-scripts/ifcfg-{{device}}"
       backup: "yes"
-          
