Updated packages refs in tower and refactored references

--- a/playbooks/roles/common/tasks/system_packages.yml
+++ b/playbooks/roles/common/tasks/system_packages.yml
@@ -2,12 +2,9 @@
 
   - name: Install base system packages
     yum:
-      name={{item}}
+      name={{item.package}}
       state=latest
     with_items: 
       - "{{packages}}"
-    tags:
-      - system_packages
-    when:
-      ansible_os_family == "RedHat"
+
 
