Deconflicting variable names

--- a/playbooks/roles/bind/defaults/main.yml
+++ b/playbooks/roles/bind/defaults/main.yml
@@ -1,4 +1,4 @@
 ---
-  packages:
-  - package: "bind-chroot"
-  - package: "bind-utils"
+  dnspkgs:
+  - dnspkg: "bind-chroot"
+  - dnspkg: "bind-utils"
