--- a/playbooks/roles/bind/tasks/main.yml
+++ b/playbooks/roles/bind/tasks/main.yml
@@ -2,8 +2,8 @@
 
   - name: Install DNS Packages
     yum:
-      name: "{{ item.package }}"
+      name: "{{ item.dnspkg }}"
       state: "latest"
     when: packages is defined
     with_items:
-      - "{{ packages }}"
+      - "{{ dnspkgs }}"
