--- a/playbooks/roles/bind/tasks/main.yml
+++ b/playbooks/roles/bind/tasks/main.yml
@@ -7,3 +7,12 @@
     when: packages is defined
     with_items:
       - "{{ dnspkgs }}"
+
+  - name: Copy named.conf template
+    template:
+      src: "named.conf.j2"
+      dest: "/etc/named.conf"
+      backup: "yes"
+      owner: "root"
+      group: "named"
+      mode: "640"
