--- a/playbooks/roles/bind/tasks/main.yml
+++ b/playbooks/roles/bind/tasks/main.yml
@@ -36,4 +36,7 @@
       mode: "640"
       validate: "named-checkconf %s"
     notify: RestartNamed
+
+  - name: Set selinux to allow user named to create journal files
+    shell: chcon -R -t dnssec_trigger_var_run_t ‘/var/named/chroot/etc/named/’
     
