Updating firewall rules to allow DNS

--- a/playbooks/roles/bind/tasks/main.yml
+++ b/playbooks/roles/bind/tasks/main.yml
@@ -37,6 +37,20 @@
       validate: "named-checkconf %s"
     notify: RestartNamed
 
+  - name: Open firewall to DNS op local net
+    firewalld:
+      service: dns
+      source: 192.168.3.0/24
+      permanent: true
+      state: enabled
+
+  - name: Open firewall to DNS to vpn net
+    firewalld:
+      service: dns
+      source: 192.168.2.0/24
+      permanent: true
+      state: enabled
+
   - name: Set selinux to allow user named to create journal files
     shell: "chcon -R -t dnssec_trigger_var_run_t /var/named/chroot/etc/named/"
     
