Added handler to restart firewalld

--- a/playbooks/roles/bind/handlers/main.yml
+++ b/playbooks/roles/bind/handlers/main.yml
@@ -4,3 +4,8 @@
     service:
       name=named
       state=restarted
+
+  - name: RestartFirewalld
+    service:
+      name=firewalld
+      state=restarted
