--- a/playbooks/roles/bind/tasks/main.yml
+++ b/playbooks/roles/bind/tasks/main.yml
@@ -54,5 +54,5 @@
     notify: RestartFirewalld
 
   - name: Set selinux to allow user named to create journal files
-    shell: "chcon -R -t dnssec_trigger_var_run_t /var/named/chroot/etc/named/"
+    shell: "chcon -R -t dnssec_trigger_var_run_t /var/named/chroot/etc/"
     
