--- a/playbooks/roles/deploy/defaults/main.yml
+++ b/playbooks/roles/deploy/defaults/main.yml
@@ -3,8 +3,8 @@
   ipaddr: "192.168.1.2"
   prefix: "24"
   gateway: "192.168.1.1"
-  dns1: "8.8.8.8"
-  dns2: "8.8.4.4"
+  dns1: "192.168.3.7"
+  #dns2: "8.8.4.4"
   domain: "localhost.localdomain"
   devicename: "eth0"
   device: "eth0"
