import networking.yml

--- a/playbooks/roles/common/tasks/main.yml
+++ b/playbooks/roles/common/tasks/main.yml
@@ -1,6 +1,7 @@
 ---
 
-  - import_tasks: system_packages.yml
+  - import_tasks: "system_packages.yml"
+  - import_tasks: "networking.yml"
 
 #  - import_tasks: hostname.yml
 
