Add handler to restart network

--- a/playbooks/roles/common/handlers/main.yml
+++ b/playbooks/roles/common/handlers/main.yml
@@ -4,5 +4,6 @@
     tags:
       - syslog 
 
-  #- name: Set temp hostname
-  #  shell: hostname {{ ansible_fqdn }}
+  - name: RestartNetwork
+    service: "network"
+    state: "restarted"
