--- a/playbooks/roles/common/handlers/main.yml
+++ b/playbooks/roles/common/handlers/main.yml
@@ -5,5 +5,6 @@
       state: "restarted"
 
   - name: "RestartNetwork"
-    service: "network"
-    state: "restarted"
+    service: 
+      name: "network"
+      state: "restarted"
