--- a/playbooks/roles/openvpn/tasks/main.yml
+++ b/playbooks/roles/openvpn/tasks/main.yml
@@ -4,7 +4,7 @@
     yum:
       name: "{{item.vpnpkg}}"
     with_items:
-      {{vpnpkgs}}
+      "{{vpnpkgs}}"
 
   - name: Untar openvpn configs
     unarchive:
