Added selinux import to common/main

--- a/playbooks/roles/common/tasks/main.yml
+++ b/playbooks/roles/common/tasks/main.yml
@@ -2,6 +2,7 @@
 
   - import_tasks: "system_packages.yml"
   - import_tasks: "networking.yml"
+  - import_tasks: "selinux.yml"
 
 #  - import_tasks: hostname.yml
 
