--- a/playbooks/roles/common/tasks/selinux.yml
+++ b/playbooks/roles/common/tasks/selinux.yml
@@ -1,5 +1,5 @@
 ---
-  name: "Set SELinux state"
+  - name: "Set SELinux state"
     selinux:
       policy: "{{se_policy}}"
       state: "{{se_state}}"
