--- a/playbooks/roles/common/tasks/selinux.yml
+++ b/playbooks/roles/common/tasks/selinux.yml
@@ -4,7 +4,7 @@
       policy: "{{se_policy}}"
       state: "{{se_state}}"
 
-- name: Restart server
-  shell: sleep 2 && /sbin/shutdown -r now "Ansible system package upgraded"
-  async: 1
-  poll: 0
+  - name: "Restart server"
+    shell: sleep 2 && /sbin/shutdown -r now "Ansible system package upgraded"
+    async: 1
+    poll: 0
