Updating firewalld rules for openvpn

--- a/playbooks/roles/openvpn/tasks/main.yml
+++ b/playbooks/roles/openvpn/tasks/main.yml
@@ -8,5 +8,12 @@
 
   - name: Untar openvpn configs
     unarchive:
-      src: "{{ artifact_repo }}openvpn/pc-openvpnserver.tgz"
+      src: "{{ artifact_repo }}openvpn/pc-openvpnserver.tar.gz"
       dest: "/etc/openvpn"
+
+  - name: Open firewall to OpenVPN
+    firewalld:
+      service: openvpn
+      permanent: true
+      state: enabled
+    notify: RestartFirewalld
