--- a/playbooks/roles/openvpn/tasks/main.yml
+++ b/playbooks/roles/openvpn/tasks/main.yml
@@ -7,8 +7,10 @@
       "{{vpnpkgs}}"
 
   - name: Enable OpenVPN
-    service: openvpn@server
-    status: enabled
+    service: 
+      name: "openvpn@server"
+      status: "started"
+      enabled: "yes"
 
   - name: Untar openvpn configs
     unarchive:
