enable ip forwarding in linux kernel

--- a/playbooks/roles/openvpn/tasks/main.yml
+++ b/playbooks/roles/openvpn/tasks/main.yml
@@ -23,3 +23,9 @@
       permanent: true
       state: enabled
     notify: RestartFirewalld
+
+  - name: enable forwarding in the kernel
+    sysctl:
+      name: net.ipv4.ip_forward
+      value: 1
+      sysctl_set: yes
