Allow traffic between networks in iptables via firewalld

--- a/playbooks/roles/openvpn/tasks/main.yml
+++ b/playbooks/roles/openvpn/tasks/main.yml
@@ -24,6 +24,9 @@
       state: enabled
     notify: RestartFirewalld
 
+  - name: Allow traffic between networks through FORWRD iptables chain via firewalld
+    command: "firewall-cmd --direct --add-rule ipv4 filter FORWARD 0 -o tun0 -i ens192 --permanent -j ACCEPT"  
+
   - name: enable forwarding in the kernel
     sysctl:
       name: net.ipv4.ip_forward
