--- a/playbooks/roles/bind/tasks/main.yml
+++ b/playbooks/roles/bind/tasks/main.yml
@@ -59,6 +59,6 @@
       state: enabled
     notify: RestartFirewalld
 
-  - name: Set selinux to allow user named to create journal files
-    shell: "chcon -R -t dnssec_trigger_var_run_t /var/named/chroot/etc/"
+  #- name: Set selinux to allow user named to create journal files
+  #  shell: "chcon -R -t dnssec_trigger_var_run_t /var/named/chroot/etc/"
     
