Adding yum repo configuration to common role

--- a/playbooks/roles/common/tasks/main.yml
+++ b/playbooks/roles/common/tasks/main.yml
@@ -1,5 +1,6 @@
 ---
 
+  - import_tasks: "epel.yml"
   - import_tasks: "system_packages.yml"
   - import_tasks: "networking.yml"
   - import_tasks: "selinux.yml"
