--- a/playbooks/roles/common/tasks/main.yml
+++ b/playbooks/roles/common/tasks/main.yml
@@ -4,6 +4,7 @@
   - import_tasks: "system_packages.yml"
   - import_tasks: "networking.yml"
   - import_tasks: "selinux.yml"
+  - import_tasks: "yum_repo.yml"
 
 #  - import_tasks: hostname.yml
 
