--- a/playbooks/roles/common/tasks/yum_repo.yml
+++ b/playbooks/roles/common/tasks/yum_repo.yml
@@ -14,6 +14,8 @@
     mount:
       path: "{{repo_mount}}"
       state: "mounted"
+      src: "{{repo_share}}"
+      fstype: "cifs"
 
   - name: Remove all repos
     file:
