--- a/playbooks/roles/common/tasks/yum_repo.yml
+++ b/playbooks/roles/common/tasks/yum_repo.yml
@@ -19,6 +19,7 @@
 
   - name: "Mount {{repo_mount}}"
     shell: "mount {{repo_mount}}"
+    ignore_errors: "yes"
 
   - name: Remove all repos
     file:
