--- a/playbooks/roles/reposync/tasks/main.yml
+++ b/playbooks/roles/reposync/tasks/main.yml
@@ -4,7 +4,7 @@
       name: "{{item}}"
       state: latest
     with_items:
-      - yum_utils
+      - yum-utils
       - createrepo
 
   - name: Sync CentOS 7 Yum Repository
