Adding createrepo logic

--- a/playbooks/roles/reposync/tasks/main.yml
+++ b/playbooks/roles/reposync/tasks/main.yml
@@ -12,17 +12,37 @@
     async: 3600
     poll: 10
 
+  - name: Update CentOS 7 Base Repository
+    shell: createrepo --update {{repo_path}}/base
+    async: 3600
+    poll: 10
+
   - name: Sync CentOS 7 EPEL Repository
     shell: reposync -d --gpgcheck -l --repoid=epel --download_path={{repo_path}} --downloadcomps --download-metadata
     async: 3600
     poll: 10
 
-  - name: Sync CentOS 7 Updated Repository
+  - name: Update CentOS 7 EPEL Repository
+    shell: createrepo --update {{repo_path}}/epel
+    async: 3600
+    poll: 10
+
+  - name: Sync CentOS 7 Updates Repository
     shell: reposync -d --gpgcheck -l --repoid=updates --download_path={{repo_path}} --downloadcomps --download-metadata
+    async: 3600
+    poll: 10
+
+  - name: Update CentOS 7 Updates Repository
+    shell: createrepo --update {{repo_path}}/updates
     async: 3600
     poll: 10
 
   - name: Sync CentOS 7 Extras Repository
     shell: reposync -d --gpgcheck -l --repoid=extras --download_path={{repo_path}} --downloadcomps --download-metadata
+    async: 3600
+    poll: 10
+
+  - name: Update CentOS 7 Extras Repository
+    shell: createrepo --update {{repo_path}}/extras
     async: 3600
     poll: 10
