--- a/playbooks/roles/common/tasks/yum_repo.yml
+++ b/playbooks/roles/common/tasks/yum_repo.yml
@@ -32,7 +32,7 @@
     file:
       path: "/etc/yum.repos.d/*"
       state: "absent"
-    when: "local_update" in {{group_names}}
+    when: "local_update" in "{{group_names}}"
 
   - name: Push base repo config
     template:
