CIFS mount options
Adding nobrl to CIFS mount to prevent file locking for createrepo

--- a/playbooks/roles/common/tasks/yum_repo.yml
+++ b/playbooks/roles/common/tasks/yum_repo.yml
@@ -8,7 +8,7 @@
   - name: Make sure yum repo is in fstab
     lineinfile:
       path: "/etc/fstab"
-      line: '{{repo_share}} {{repo_mount}} cifs username={{repo_user}},password={{repo_passwd}},uid=110,gid=120,rw,suid 0 0'
+      line: '{{repo_share}} {{repo_mount}} cifs nobrl,username={{repo_user}},password={{repo_passwd}},uid=110,gid=120,rw,suid 0 0'
 
 #  - name: Mount yum share
 #    mount:
