--- a/playbooks/roles/yum_update/tasks/main.yml
+++ b/playbooks/roles/yum_update/tasks/main.yml
@@ -4,6 +4,8 @@
     mount:
       path: "/yum_repo"
       state: "mounted"
+      fstype: "cifs"
+      src: "\\mycloudnas\yum_repos"
 
   - name: Update all installed packages
     yum:
