--- a/playbooks/roles/yum_update/tasks/main.yml
+++ b/playbooks/roles/yum_update/tasks/main.yml
@@ -5,7 +5,7 @@
       path: "/yum_repo"
       state: "mounted"
       fstype: "cifs"
-      src: "\\mycloudnas\yum_repos"
+      src: "//mycloudnas/yum_repos"
 
   - name: Update all installed packages
     yum:
