Unmount yum repo after update

--- a/playbooks/roles/yum_update/tasks/main.yml
+++ b/playbooks/roles/yum_update/tasks/main.yml
@@ -13,3 +13,9 @@
       name: "*"
       update_cache: "yes"
       state: "latest"
+
+  - name:  Make sure yum repo is unmounted
+    mount:
+      path: "/yum_repo"
+      state: "unmounted"
+
