--- a/playbooks/roles/common/tasks/main.yml
+++ b/playbooks/roles/common/tasks/main.yml
@@ -17,3 +17,7 @@
 #- include: hosts_file.yml
 #  tags: hosts_file
 
+  - name:  Make sure yum repo is unmounted
+    mount:
+      path: "/yum_repo"
+      state: "unmounted"
